fix(dropdown): Fix z-index for ribbon

--- a/app/styles/components/_highlight.scss
+++ b/app/styles/components/_highlight.scss
@@ -100,7 +100,7 @@
     @include size(52px 20px);
     background: 0 0 no-repeat;
     background-size: 52px 20px;
-    z-index: 1000;
+    z-index: 9;
   }
 
   &.javascript .ribbon,
